Only group patch deps

--- a/renovate.json
+++ b/renovate.json
@@ -2,8 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base",
-    ":assignee(marcus-crane)",
-    "group:allNonMajor"
+    ":assignee(marcus-crane)"
   ],
   "prHourlyLimit": 10,
   "schedule": [
@@ -11,5 +10,17 @@
   ],
   "npm": {
     "stabilityDays": 3
-  }
+  },
+  "packageRules": [
+    {
+      "groupName": "all patch dependencies",
+      "groupSlug": "all-patch",
+      "matchPackagePatterns": [
+        "*"
+      ],
+      "matchUpdateTypes": [
+        "patch"
+      ]
+    }
+  ]
 }
