--- a/.vale.ini
+++ b/.vale.ini
@@ -2,9 +2,9 @@ StylesPath = ".github/styles"
 
 MinAlertLevel = suggestion
 
-Vocab = Brands, Products
+Vocab = Brands, Hardware, Products, Software, Terms
 
 Packages = Hugo
 
-[*]
-BasedOnStyles = Vale, Blog
+[*.md]
+BasedOnStyles = Blog
