Fix timeout field
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -24,7 +24,7 @@ build:
 # Extended build timeout for image processing
 # Generated artifacts are committed to keep build times quick
 # but initial processing of new items can take a bit
-timeout: 60000
+timeout: "60s"
 
 menu:
   main:
