--- a/data/books.yml
+++ b/data/books.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=../static/schemas/books.schema.json
 - list: 2023
   goal: 24
   books:
@@ -11,14 +12,14 @@
     rating: null
     progress: 11
 
-  - title: The Seven-Day Stress Prescription
-    subtitle: null
-    author: Elissa Epel
-    cover: https://covers.openlibrary.org/b/id/14304273-L.jpg
-    link: https://openlibrary.org/works/OL27774869W/The_Stress_Prescription
-    date_finished: null
-    rating: null
-    progress: 10
+  # - title: The Seven-Day Stress Prescription
+  #   subtitle: null
+  #   author: Elissa Epel
+  #   cover: https://covers.openlibrary.org/b/id/14304273-L.jpg
+  #   link: https://openlibrary.org/works/OL27774869W/The_Stress_Prescription
+  #   date_finished: null
+  #   rating: null
+  #   progress: 10
 
   # - title: Wrong Way
   #   subtitle: How Privatisation & Economic Reform Backfired
@@ -28,6 +29,15 @@
   #   date_finished: null
   #   rating: null
   #   progress: 5
+
+  - title: Hanging Out
+    subtitle: The Radical Power of Killing Time
+    author: Sheila Liming
+    cover: https://covers.openlibrary.org/b/id/13847599-L.jpg
+    link: https://openlibrary.org/works/OL27939130W/Hanging_Out?edition=
+    date_finished: 2023-06-06
+    rating: 3
+    progress: 100
     
   - title: Like, Comment, Subscribe
     subtitle: How YouTube Drives Google's Dominance and Controls Our Culture
