--- a/data/games.yml
+++ b/data/games.yml
@@ -1,11 +1,6 @@
+# yaml-language-server: $schema=../static/schemas/games.schema.json
 - list: Actively playing
   games:
-    - cover: https://images.igdb.com/igdb/image/upload/t_cover_big/co2kqa.png
-      date_finished: 2023-04-14
-      id: 114009
-      link: https://www.igdb.com/games/dragon-ball-z-kakarot
-      platform: PC
-      title: "Dragon Ball Z: Kakarot"
     - cover: https://images.igdb.com/igdb/image/upload/t_cover_big/co5x13.png
       id: 194837
       link: https://www.igdb.com/games/one-piece-odyssey
@@ -23,6 +18,12 @@
       link: https://www.igdb.com/games/digimon-story-cyber-sleuth
       platform: Nintendo Switch
       title: "Digimon Story: Cyber Sleuth"
+    - cover: https://images.igdb.com/igdb/image/upload/t_cover_big/co2kqa.png
+      date_finished: 2023-04-14
+      id: 114009
+      link: https://www.igdb.com/games/dragon-ball-z-kakarot
+      platform: PC
+      title: "Dragon Ball Z: Kakarot"
     - cover: https://images.igdb.com/igdb/image/upload/t_cover_big/co30fd.jpg
       id: 386
       link: https://www.igdb.com/games/final-fantasy-xiv-online--1
