--- a/data/books.yml
+++ b/data/books.yml
@@ -513,7 +513,7 @@
     subtitle: The Breakneck Race to Create Windows NT and the Next Generation at Microsoft
     author: G. Pascal Zachary
     cover: https://covers.openlibrary.org/b/id/7885313-L.jpg
-    link: https://openlibrary.org/books/OL1096174M/Show_Stopper%21
+    link: https://openlibrary.org/works/OL106726W/Show-Stopper
     date_finished: 2018-01-14
     rating: 4
     progress: 100
