--- a/data/games.yml
+++ b/data/games.yml
@@ -1,6 +1,11 @@
 # yaml-language-server: $schema=../static/schemas/games.schema.json
 - list: Actively playing
   games:
+    - cover: https://images.igdb.com/igdb/image/upload/t_cover_big/co5w3k.png
+      id: 31551
+      link: https://www.igdb.com/games/final-fantasy-xvi
+      platform: Playstation 5
+      title: Final Fantasy XVI
 - list: Stalled but occasionally progress is made
   games:
     - cover: https://images.igdb.com/igdb/image/upload/t_cover_big/co2px6.jpg
