--- a/package.json
+++ b/package.json
@@ -30,5 +30,6 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "postcss-cli": "^10.1.0"
-  }
+  },
+  "packageManager": "yarn@3.6.1"
 }
