--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,11 +20,13 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11.0"
+          cache: 'pip'
       - name: Setup Node
         id: setup-node
         uses: actions/setup-node@v3
         with:
           node-version: 18
+          cache: 'yarn'
       - name: Setup Cue
         uses: cue-lang/setup-cue@v0.0.1
       - name: Setup Hugo
