--- a/data/books.yml
+++ b/data/books.yml
@@ -30,6 +30,16 @@
   #   rating: null
   #   progress: 5
 
+  - title: Unscripted
+    subtitle: The Epic Battle for a Media Empire and the Redstone Family Legacy
+    author: James B. Stewart and Rachel Abrams
+    cover: https://covers.openlibrary.org/b/id/14369191-L.jpg
+    link: https://openlibrary.org/works/OL28158768W/Unscripted
+    date_finished: null
+    rating: null
+    progress: 9
+    reader_id: 01gzt4jmrpjq71g751njes3ezx
+
   - title: What the CEO Wants You to Know
     subtitle: How Your Company Really Works
     author: Ram Charan
@@ -37,7 +47,8 @@
     link: https://openlibrary.org/works/OL34804299W/What_the_CEO_Wants_You_to_Know
     date_finished: null
     rating: null
-    progress: 5
+    progress: 18
+    reader_id: 01h2mpk1bwpwjpzr34mwmxw7rx
 
   - title: Hanging Out
     subtitle: The Radical Power of Killing Time
@@ -47,7 +58,7 @@
     date_finished: 2023-06-06
     rating: 3
     progress: 100
-    
+
   - title: Like, Comment, Subscribe
     subtitle: How YouTube Drives Google's Dominance and Controls Our Culture
     author: Mark Bergen
@@ -56,11 +67,11 @@
     date_finished: 2023-02-07
     rating: 5
     progress: 100
- 
+
 - list: 2022
   goal: 12
   books:
-  
+
   - title: Build
     subtitle: An Unorthodox Guide to Making Things Worth Making
     author: Tony Fadell
@@ -93,7 +104,7 @@
     author: Mick Herron
     cover: https://covers.openlibrary.org/b/id/12861756-L.jpg
     link: https://openlibrary.org/works/OL18630860W
-    date_finished: 2022-09-18 
+    date_finished: 2022-09-18
     rating: 4
     progress: 100
 
