Stick to requirements to make life easier
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -3,16 +3,19 @@ beautifulsoup4==4.12.2
 bs4==0.0.1
 certifi==2023.5.7
 chardet==5.1.0
+charset-normalizer==3.1.0
 docopt==0.6.2
 gitdb==4.0.10
 GitPython==3.1.31
 idna==3.4
 mistune==3.0.1
-Pillow==9.5.0
+Pillow==10.0.0
 PyYAML==6.0
 requests==2.31.0
+ruamel.yaml==0.17.32
+ruamel.yaml.clib==0.2.7
 smmap==5.0.0
 soupsieve==2.4.1
 specktre==0.3.0
-typing-extensions==4.6.3
-urllib3==1.26.16
+typing_extensions==4.6.3
+urllib3==2.0.3
