--- a/.github/workflows/manga-sync.yml
+++ b/.github/workflows/manga-sync.yml
@@ -17,7 +17,7 @@ jobs:
           python-version: "3.11.0"
       - name: Install dependencies
         run: python -m pip install -r scripts/requirements.txt
-      - name: Audit links
+      - name: Sync Manga
         run: python scripts/sync-manga.py
       - name: Commit manga changes
         env:
