--- a/.github/workflows/reader-sync.yml
+++ b/.github/workflows/reader-sync.yml
@@ -17,7 +17,7 @@ jobs:
           python-version: "3.11.0"
       - name: Install dependencies
         run: python -m pip install -r scripts/requirements.txt
-      - name: Audit links
+      - name: Sync reading state
         run: python scripts/sync-reader.py
       - name: Commit reader changes
         env:
