--- a/.github/workflows/reader-sync.yml
+++ b/.github/workflows/reader-sync.yml
@@ -19,6 +19,8 @@ jobs:
         run: python -m pip install -r scripts/requirements.txt
       - name: Sync reading state
         run: python scripts/sync-reader.py
+        env:
+          RWSESSIONID: ${{ secrets.RWSESSIONID }}
       - name: Commit reader changes
         env:
           # We use a PAT in order to trigger other workflows on commit
