--- a/.github/workflows/reader-sync.yml
+++ b/.github/workflows/reader-sync.yml
@@ -5,7 +5,7 @@ on:
     - cron: '0 * * * *'
   workflow_dispatch:
 jobs:
-  sync:
+  reader-sync:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
