--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -6,16 +6,20 @@ chardet==5.1.0
 charset-normalizer==3.1.0
 docopt==0.6.2
 gitdb==4.0.10
-GitPython==3.1.32
+GitPython==3.1.31
 idna==3.4
 mistune==3.0.1
+pendulum==2.1.2
 Pillow==10.0.0
-PyYAML==6.0.1
+python-dateutil==2.8.2
+pytzdata==2020.1
+PyYAML==6.0
 requests==2.31.0
 ruamel.yaml==0.17.32
 ruamel.yaml.clib==0.2.7
+six==1.16.0
 smmap==5.0.0
 soupsieve==2.4.1
 specktre==0.3.0
-typing_extensions==4.7.1
-urllib3==2.0.4
+typing_extensions==4.6.3
+urllib3==2.0.3
