Add readwise token to env
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,8 @@ on:
     workflows: [Audit Links, Manga Sync, Reader Sync]
     types:
       - completed
+env:
+  READWISE_TOKEN: ${{ secrets.RWSESSIONID }}
 jobs:
   build:
     runs-on: ubuntu-20.04
