--- a/.github/workflows/external-sync.yml
+++ b/.github/workflows/external-sync.yml
@@ -4,6 +4,8 @@ on:
     # This is mostly a no-op which is why it runs so often
     - cron: '*/15 * * * *'
   workflow_dispatch:
+env:
+  READWISE_TOKEN: ${{ secrets.READWISE_TOKEN }}
 jobs:
   external-sync:
     runs-on: ubuntu-20.04
