--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,8 @@ on:
     types:
       - completed
 env:
-  READWISE_TOKEN: ${{ secrets.RWSESSIONID }}
+  ANILIST_TOKEN: ${{ secrets.ANILIST_TOKEN }}
+  READWISE_TOKEN: ${{ secrets.READWISE_TOKEN }}
 jobs:
   build:
     runs-on: ubuntu-20.04
