--- a/.github/workflows/external-sync.yml
+++ b/.github/workflows/external-sync.yml
@@ -5,6 +5,7 @@ on:
     - cron: '*/15 * * * *'
   workflow_dispatch:
 env:
+  ANILIST_TOKEN: ${{ secrets.ANILIST_TOKEN }}
   READWISE_TOKEN: ${{ secrets.READWISE_TOKEN }}
 jobs:
   external-sync:
