--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,25 @@ resources/_gen/*
 !resources/_gen/images/
 
 .github/styles/dics/*
+
+# build output
+dist/
+# generated types
+.astro/
+
+# dependencies
+node_modules/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+
+# environment variables
+.env
+.env.production
+
+# macOS-specific files
+.DS_Store
