--- a/data/books.yml
+++ b/data/books.yml
@@ -21,15 +21,6 @@
   #   rating: null
   #   progress: 10
 
-  # - title: Wrong Way
-  #   subtitle: How Privatisation & Economic Reform Backfired
-  #   author: Damien Cahill and Phillip Toner
-  #   cover: https://covers.openlibrary.org/b/id/12996382-L.jpg
-  #   link: https://openlibrary.org/works/OL29300070W/Wrong_Way
-  #   date_finished: null
-  #   rating: null
-  #   progress: 5
-
   - title: High Performance Browser Networking
     subtitle: What Every Web Developer Should Know about Networking and Web Performance
     author: Ilya Grigorik
@@ -39,23 +30,32 @@
     rating: null
     progress: 36 
 
-  - title: Unscripted
-    subtitle: The Epic Battle for a Media Empire and the Redstone Family Legacy
-    author: James B. Stewart and Rachel Abrams
-    cover: https://covers.openlibrary.org/b/id/14369191-L.jpg
-    link: https://openlibrary.org/works/OL28158768W/Unscripted
+  - title: Wrong Way
+    subtitle: How Privatisation & Economic Reform Backfired
+    author: Damien Cahill and Phillip Toner
+    cover: https://covers.openlibrary.org/b/id/12996382-L.jpg
+    link: https://openlibrary.org/works/OL29300070W/Wrong_Way
     date_finished: null
     rating: null
     progress: 15
 
-  - title: What the CEO Wants You to Know
-    subtitle: How Your Company Really Works
-    author: Ram Charan
-    cover: https://covers.openlibrary.org/b/id/14353679-L.jpg
-    link: https://openlibrary.org/works/OL34804299W/What_the_CEO_Wants_You_to_Know
-    date_finished: null
-    rating: null
-    progress: 57
+  # - title: Unscripted
+  #   subtitle: The Epic Battle for a Media Empire and the Redstone Family Legacy
+  #   author: James B. Stewart and Rachel Abrams
+  #   cover: https://covers.openlibrary.org/b/id/14369191-L.jpg
+  #   link: https://openlibrary.org/works/OL28158768W/Unscripted
+  #   date_finished: null
+  #   rating: null
+  #   progress: 15
+
+  # - title: What the CEO Wants You to Know
+  #   subtitle: How Your Company Really Works
+  #   author: Ram Charan
+  #   cover: https://covers.openlibrary.org/b/id/14353679-L.jpg
+  #   link: https://openlibrary.org/works/OL34804299W/What_the_CEO_Wants_You_to_Know
+  #   date_finished: null
+  #   rating: null
+  #   progress: 57
 
   - title: The PARA Method
     subtitle: Simplify, Organize, and Master Your Digital Life
