--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,13 +22,13 @@ jobs:
         id: setup-python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11.0"
+          python-version: "3.12.0"
           cache: 'pip'
       - name: Setup Node
         id: setup-node
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: "21.0.0"
       - name: Setup Cue
         uses: cue-lang/setup-cue@v1.0.0
       - name: Setup Hugo
