--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "eslint": "8.50.0",
     "littlefoot": "4.0.1",
-    "prettier": "^3.0.0"
+    "markdown-it": "^13.0.2",
+    "prettier": "^3.0.0",
+    "sanitize-html": "^2.11.0"
   },
   "dependencies": {
     "@astrojs/mdx": "^1.1.2",
