Disable external sync for now
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/.github/workflows/external-sync.yml
+++ b/.github/workflows/external-sync.yml
@@ -1,8 +1,8 @@
 name: External Sync
 on:
-  schedule:
+  # schedule:
     # This is mostly a no-op which is why it runs so often
-    - cron: '*/15 * * * *'
+    # - cron: '*/15 * * * *'
   workflow_dispatch:
 env:
   ANILIST_TOKEN: ${{ secrets.ANILIST_TOKEN }}
