--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "deploy": "./ci/deploy.sh",
     "lint": "eslint assets/js",
     "test": "./ci/test.sh",
+    "sync": "./ci/externalsync.sh",
     "prettify": "prettier --write --print-width 120 public/**/**/**/*.html",
     "syntax": "prettier -c public/**/**/**/*.html"
   },
