--- a/astro/package.json
+++ b/astro/package.json
@@ -13,6 +13,8 @@
     "@astrojs/check": "^0.3.0",
     "astro": "^3.4.0",
     "littlefoot": "^4.0.1",
+    "mdast-util-to-string": "^4.0.0",
+    "reading-time": "^1.5.0",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
