--- a/astro/package.json
+++ b/astro/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.0",
+    "@astrojs/rss": "^3.0.0",
     "astro": "^3.4.0",
     "littlefoot": "^4.0.1",
+    "markdown-it": "^13.0.2",
     "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
+    "sanitize-html": "^2.11.0",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
