--- a/astro/package.json
+++ b/astro/package.json
@@ -15,6 +15,7 @@
     "astro": "^3.4.0",
     "littlefoot": "^4.0.1",
     "markdown-it": "^13.0.2",
+    "markdown-it-footnote": "^3.0.3",
     "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
     "sanitize-html": "^2.11.0",
