--- a/lume/deno.json
+++ b/lume/deno.json
@@ -9,6 +9,7 @@
     "serve": "deno task lume -s"
   },
   "imports": {
-    "lume/": "https://deno.land/x/lume@v1.19.3/"
+    "lume/": "https://deno.land/x/lume@v1.19.3/",
+    "lume-src/": "https://github.com/lumeland/lume/raw/v1.19.3/"
   }
 }
