Update deno imports to remove redirect
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/lume/deno.json
+++ b/lume/deno.json
@@ -10,6 +10,6 @@
   },
   "imports": {
     "lume/": "https://deno.land/x/lume@v1.19.3/",
-    "lume-src/": "https://github.com/lumeland/lume/raw/v1.19.3/"
+    "lume-src/": "https://raw.githubusercontent.com/lumeland/lume/v1.19.3/"
   }
 }
