--- a/lume/deno.json
+++ b/lume/deno.json
@@ -9,7 +9,6 @@
     "serve": "deno task lume -s"
   },
   "imports": {
-    "lume/": "https://deno.land/x/lume@v1.19.4/",
-    "lume-src/": "https://raw.githubusercontent.com/lumeland/lume/v1.19.3/"
+    "lume/": "https://raw.githubusercontent.com/lumeland/lume/main/"
   }
 }
