--- a/deno.json
+++ b/deno.json
@@ -14,6 +14,8 @@
     "sync": "./ci/externalsync.sh"
   },
   "imports": {
-    "lume/": "https://deno.land/x/lume@v1.19.4/"
+    "lume/": "https://deno.land/x/lume@v1.19.4/",
+    "prettier": "npm:prettier@3.1.0",
+    "rehype-pretty-code": "npm:rehype-pretty-code@0.11.0"
   }
 }
